--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -85,7 +85,6 @@
 								<div class="col-md-2">
 									<input id="rejectPopup" readonly="readonly" name="rejectPopup" value="Отхвърлям" onclick="btnShowPopup({{ project.id }})"><div class="reject_icon"></div>
 								</div>
-
 								{% elseif app.user.type == "LittleBoss" or app.user.type == "Boss" %}
 								<div class="col-md-2">
 									<input type="submit" readonly="readonly" id="hold" name="hold" value="На изчакване" onclick="return check()"><div class="hold_icon"></div>
@@ -93,23 +92,29 @@
 								<div class="col-md-2" >
 									<input type="submit" readonly="readonly" id="forApproval" name="forApproval" value="За одобрение"/><div class="forApproval_icon"></div>
 								</div>
+
                                 {% endif %}		
 							    </form>	
 								{% if project.isOver %}
 								{% elseif app.user.type == "Designer" or app.user.username == "metro.reklama" %}
 								<div class="col-md-2">
 									{% set form = add_files_form.createView %}
-									<input value="Прикачи файл" id="button_upload">
+									<input value="Прикачи файл" id="button_upload"><div class="upload_icon"></div>
                                     {{ form_start(form, {'action':path('image_upload', { 'id': project.id }),'attr': {'id': project.id}, 'method': 'POST'}) }}
 									{{ form_widget(form.files, {'attr' : {'onChange': 'submitForm(' ~ project.id ~ ')'}}) }}
                                     {{ form_end(form) }}
 					            </div>
+								<div class="col-md-2">
+									<input id="inserLink" readonly="readonly" name="inserLink" value="Линк" onclick="btnShowLink({{ project.id }})"><div class="link_icon"></div>
+								</div>
 								{% endif %}
 					{% endif %}						
                              <div>
+												<form action="{{ path('project_update', { 'id': project.id }) }}" method="post">
 								<div class="col-md-2">
 									<input id="button_details" readonly="readonly" value="Детайли" onclick="location.href='{{ path('project_show', { 'id': project.id }) }}'"/><div class="details_icon"></div>
 								</div>
+								</form>
                             {% if project.isOver %}
 
 							{% elseif app.user.type == "LittleBoss" or app.user.type == "Boss" %}	
@@ -120,9 +125,9 @@
 							{% endif %}
 
 				    {% if project.isOver %}					
-					{% elseif project.forApproval or project.isApproved and ( app.user.type == "LittleBoss" or app.user.type == "Boss" )  %}
+					{% elseif project.forApproval or project.isApproved and ( app.user.type == "LittleBoss" or app.user.type == "Boss" or app.user.type == "Designer")  %}
 								<form action="{{ path('project_update', { 'id': project.id }) }}" method="post">
-								<div  class="popup" id="{{ project.id }}">
+								<div  class="popup" id="popup{{ project.id }}">
 									<div class="popup-content">
 										<span class="close" onclick="btnHidePopup({{ project.id }})">&times;</span>
 										<p>Сигурни ли сте, че искате да отхвърлите заявката?</p>
@@ -138,7 +143,25 @@
 												</div>
 										</div>
 									</div>
-								</div>
+								</div>	
+                                </form>
+								<form action="{{ path('project_update', { 'id': project.id }) }}" method="post">
+								<div  class="link" id="link{{ project.id }}">
+									<div class="link-content">
+										<span class="close" onclick="btnHideLink({{ project.id }})">&times;</span>
+										<p>Качи линк</p>
+										<textarea id="link" name="link" required="required"></textarea>
+										<div id="name-error" class="error"></div>
+										<div style="height: 40px; margin-top: 20px;">
+											<div class="col-md-2">
+											<button type="button" id="button_cancel_popup" onclick="btnHideLink({{ project.id }})">Не</button><div class="reject_icon"></div>
+											</div>
+												<div class="col-md-2">
+												<input type="submit" readonly="readonly" id="approve" name="approve" value="Запази"><div class="save_new_query_icon"></div>    
+												</div>
+										</div>
+									</div>
+								</div>		
                                 </form>
                     {% endif %}	
 
