--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -582,7 +582,7 @@ form[name=appbundle_file] {
 	cursor:pointer;
 	opacity:0.8;
 }
-#approve{
+#approve, #inserLink{
     background-color: #18bc9c;
     border-bottom: 2px solid #3a9b88;
     border-radius: 0;
@@ -669,7 +669,7 @@ select{
     border-radius: 3px;
 }
 
- .delete_icon a, .approve_icon a, .reject_icon a, .archive_icon a, .back_icon a, .edit_icon a, .comment_icon a, .save_new_query_icon a, .login_icon a, .hold_icon a, .forApproval_icon a, .details_icon a, .working_icon a, .upload_icon a{
+ .delete_icon a, .approve_icon a, .reject_icon a, .archive_icon a, .back_icon a, .edit_icon a, .comment_icon a, .save_new_query_icon a, .login_icon a, .hold_icon a, .forApproval_icon a, .details_icon a, .working_icon a, .upload_icon a, .link_icon a{
     line-height: 2.5;
     -webkit-transition: .3s ease;
     transition: .3s ease; 		
@@ -842,6 +842,18 @@ select{
     top: 10px;
     left: 28px;
 }
+.link_icon:before{
+	content: "\f0c1";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    color: #ebebeb;
+    font-size: 20px;
+    position: absolute;
+    top: 10px;
+    left: 28px;
+}
 .downloadImg_icon{
     position: relative;
     float: left;
@@ -956,7 +968,28 @@ select{
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
-.popup-content {
+.link {
+	background: rgba(100, 100, 100, 0.6);
+	position: fixed;
+	display: none;
+	z-index: 5000;
+	height: 100%;
+	width: 100%;
+	left: 0;
+	top: 0;
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+.popup-content, .link-content {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
@@ -975,7 +1008,7 @@ select{
     text-decoration: none;
     cursor: pointer;
 }
-.popup textarea{
+.popup textarea, .link textarea{
 	width:100%;
 	height:100px;
 }
