--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,9 +28,11 @@
                     <a href="{{ path('project_index') }}">Заявки</a>
 					{% if app.user.username == "a.vali" %}
 					<a href="{{ path('project_designer') }}">Заявки Вали</a>
-					{% endif %}					
+					{% endif %}		
+                    {% if app.user.type == "LittleBoss" %}					
                     <a href="{{ path('project_archive') }}">Архивирани Заявки</a>
-                    {% if (app.user.type == "Manager") or (app.user.type == "LittleBoss" and app.user.username != "a.vali" ) %}
+					{% endif %}
+                    {% if app.user.type == "Manager" or app.user.type == "LittleBoss" or app.user.username == "Скай Строй" %}
                     <a href="{{ path('project_new') }}">Нова заявка</a>
                     {% endif %}
                 {% else %}
