Change linkbutton name, when project.isRejected show archivebutton
Change linkbutton name, when project.isRejected show archivebutton

--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -159,7 +159,7 @@
 											<button type="button" id="button_cancel_popup" onclick="btnHideLink({{ project.id }})">Не</button><div class="reject_icon"></div>
 											</div>
 												<div class="col-md-2">
-												<input type="submit" readonly="readonly" id="approve" name="approve" value="Запази"><div class="save_new_query_icon"></div>    
+												<input type="submit" readonly="readonly" id="approveLink" name="approveLink" value="Запази"><div class="save_new_query_icon"></div>    
 												</div>
 										</div>
 									</div>
