--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
 {% block head %}
     <head>
         <meta charset="UTF-8" />
-        <title id="title">{% block title %}Welcome!{% endblock %}</title>
+        <title id="title">{% block title %}Winbet Task Manager{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset("styles/bootstrap.min.css") }}">
             <link rel="stylesheet" href="{{ asset("styles/main.css") }}">
@@ -29,7 +29,8 @@
 					{% if app.user.username == "a.vali" %}
 					<a href="{{ path('project_designer') }}">Заявки Вали</a>
 					{% endif %}		
-                    {% if app.user.type == "LittleBoss" %}					
+                    {% if app.user.type == "LittleBoss" %}
+					<a href="{{ path('project_executioner') }}">Заявки Подизпълнител</a>					
                     <a href="{{ path('project_archive') }}">Архивирани Заявки</a>
 					{% endif %}
                     {% if app.user.type == "Manager" or app.user.type == "LittleBoss" or app.user.username == "Скай Строй" %}
