--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,12 +24,11 @@
     <nav>
         <div>
             <div class="pull-left">
+			<p id="demo"></p>
                 {% if app.user %}
                     <a href="{{ path('project_index') }}">Заявки</a>
-					{% if app.user.username == "a.vali" %}
-					<a href="{{ path('project_designer') }}">Заявки Вали</a>
-					{% endif %}		
                     {% if app.user.type == "LittleBoss" %}
+					<a href="{{ path('project_designer') }}">Заявки Вали</a>
 					<a href="{{ path('project_executioner') }}">Заявки Подизпълнител</a>		
 					{% endif %}			
                     <a href="{{ path('project_archive') }}">Архивирани Заявки</a>
